--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           <a class="nav-link" href="/write">Write</a>
         </div>
       </div>
+      <div class="login-con collapse navbar-collapse" id="navbarNavAltMarkup">
+        <a href="/login" class="nav-link">| Log in |</a>
+        <a href="/mypage" class="nav-link">| My page |</a>
+      </div>
     </div>
   </nav>
 
